Added integration test for Generic Async Sink implementation